# fake-it

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
assets/data/: country_phone_code.csv
benches/: bench_country_code.rs  name_gen.rs
examples/: data-gen.rs
src/: datetime.rs  email.rs  lib.rs  person.rs  utils.rs
src/providers/: person.rs
