[package]
name = "fake-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with-bench = []

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
regex = "1.9.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
csv = "1.2.2"

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4", "serde"] }
