[package]
name = "fake-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with-bench = []

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
regex = "1.10.2"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
csv = "1.3.0"

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4", "serde"] }
